Edit markdown style

--- a/_posts/2019-02-26-Goals.md
+++ b/_posts/2019-02-26-Goals.md
@@ -16,9 +16,9 @@ they do. In order to accomplish this, I have decided to build my own collection 
 database and modeling tools all while utilizing data from tv's favorite gameshow: Jeopardy.
 
 With the project I have 3 goals that I look to achieve:
-1) Design a system to collect and store Jeopardy data
-2) After collecting a trove of data, learn how to model and predict Jeopardy outcomes
-3) Write a blog that details what and how I am going about doing this
+1. Design a system to collect and store Jeopardy data
+2. After collecting a trove of data, learn how to model and predict Jeopardy outcomes
+3. Write a blog that details what and how I am going about doing this
 
 I do suspect that this project will take quite a bit of time to complete, however by doing
 so I will be able to build a skill set that will not only help me to better serve my clients
